DSS-4882: Communication Sequential Triggering (LP->LS) (#3039)
1. Communication sequential triggering framework code added.
2. Integrated sequential triggering for LP and LS.

type: bugfix

authors: @maheshkm3087, @mathewgillroy-ao